# family-tree

./: .coverage  .gitignore  .pre-commit-config.yaml  AUTH_PROTECTION_SUMMARY.md  CLEANUP_SUMMARY.md  FAMILY_SPACES_SETUP.md  README.md  check-healthz.sh  cleanup-phase-2.sh  cleanup-repo.sh  debug_email.py  debug_tree.js  docker-compose.yml  setup-dev-tools.sh  setup-email-secrets.sh  test_email_functionality.py  test_error_message.py
backend/: .env.example  .gitignore  Dockerfile  analyze_data.py  check_openapi.py  cleanup_test_users.py  coverage.xml  coverage_badge.py  debug_delete_endpoint.py  debug_endpoint.py  debug_forgot_response.py  debug_routes.py  family.schema.json  fix_test_spaces.py  migrate_invite_dates.py  migrate_to_spaces.py  pre-commit-config.yaml  pre-commit-config.yaml.backup  pyproject.toml  quick_gmail_test.py  routes_tree_fixed.py  run_space_tests.py  seed_spaces.py  simple_route_test.py  test_comprehensive_spaces.py  test_events.py  test_import.py  test_integration_spaces.py  test_public_invite.py  test_space_isolation.py  test_tree_bugs.py  testgmail.py
backend/app/: album.py  auth_utils.py  config.py  deps.py  firestore_client.py  main.py  migrate_dates_and_cleanup.py  models.py  routes_admin.py  routes_album.py  routes_auth.py  routes_events.py  routes_spaces.py  routes_tree.py  routes_user.py  scripts_backfill_dob_ts.py  scripts_migrate_dob_format.py  scripts_seed_admin.py  scripts_seed_roots.py  scripts_titlecase_members.py  storage.py
backend/family_tree_api.egg-info/: SOURCES.txt  requires.txt
backend/scripts/: create_user_account.py  (+8 more)
(+138 files in other folders)
